# czii_cryoet_mlchallenge_winning_models

./: .gitignore  .zenodo.json  LICENSE  LICENSE.md  README.md  SECURITY.md  inference.py  inference_custom.py  pyproject.toml  score.py  train.py
.github/workflows/: release.yaml
notebooks/: Quickstart_TopCUP.ipynb  Tutorial_training_TopCUP.ipynb
src/czii_cryoet_models/: model.py
src/czii_cryoet_models/configs/: cfg_effnetb3.py  cfg_resnet34.py  common_config.py
src/czii_cryoet_models/data/: augmentation.py  copick_dataset.py  custom_dataset.py  ds_1.py  utils.py
src/czii_cryoet_models/loss/: dense_cross_entropy.py
src/czii_cryoet_models/metrics/: metric_1.py
src/czii_cryoet_models/models/: mdl_1.py
src/czii_cryoet_models/modules/: unet.py  utils.py
src/czii_cryoet_models/postprocess/: constants.py  metric.py  pp_1.py  simple_pp.py  utils.py
src/czii_cryoet_models/utils/: utils.py
src/topcup/: __init__.py  model.py
src/topcup.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/topcup/cli/: cli.py  log.py  main.py
src/topcup/data/: augmentation.py  copick_dataset.py  custom_dataset.py  utils.py
src/topcup/loss/: dense_cross_entropy.py
src/topcup/modules/: unet.py  utils.py
src/topcup/postprocess/: metric.py  simple_pp.py  utils.py
src/topcup/utils/: ema.py  utils.py
