[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "topcup"
version = "1.0.1"
description = "An implementation of 2024-2025 Kaggle/CZI cryoET ML challenge winning models"
authors = [
    { name="Zhuowen Zhao", email="kevin.zhao@czii.org" },
    { name="Christof Henkel", email="chenkel@nvidia.com" },
    { name="Eugene Khvedchenya", email="ekhvedchenia@nvidia.com" }, 
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "copick",
  "scikit-learn",
  "zarr==2.18.2",
  "numcodecs==0.11.0",
  "pandas",
  "einops",
  "albumentations==1.4.21",
  "opencv-python==4.12.0.88",
  "timm==1.0.11",
  "torch==2.4.*",
  "torchvision==0.19.*",
  "pytorch-lightning==2.4.*",
  "monai==1.5.0",
  "mrcfile"
]

[project.urls]
Homepage = "https://github.com/czimaginginstitute/czii_cryoet_challenge_models"

[project.scripts]
topcup = "topcup.cli.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["topcup*"]
