[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topcup"
dynamic = ["version"]
description = "An implementation of 2024-2025 Kaggle/CZI cryoET ML challenge winning models"
readme = "README.md"
authors = [
  { name = "Zhuowen Zhao", email = "kevin.zhao@biohub.org" },
  { name = "Christof Henkel", email = "chenkel@nvidia.com" },
  { name = "Eugene Khvedchenya", email = "ekhvedchenia@nvidia.com" },
]
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]


# Optional but recommended metadata
keywords = ["cryoet","particle-picking", "machine-learning", "deep-learning"]

dependencies = [
  "copick",
  "scikit-learn",
  "zarr==2.18.2",
  "numcodecs==0.11.0",
  "pandas",
  "einops",
  "albumentations==1.4.21",
  "opencv-python==4.12.0.88",
  "timm==1.0.11",
  "torch>=2.4,<2.5",
  "torchvision>=0.19,<0.20",
  "pytorch-lightning>=2.4,<2.5",
  "monai==1.5.0",
  "mrcfile",
]

[project.urls]
Homepage = "https://github.com/czimaginginstitute/czii_cryoet_challenge_models"
Repository = "https://github.com/czimaginginstitute/czii_cryoet_challenge_models"

[project.scripts]
topcup = "topcup.cli.cli:cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["topcup*"]

[tool.setuptools.dynamic]
version = { attr = "topcup.__version__" }
